# stern

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  configure.sh  main.cpp
example/: CMakeLists.txt  README.md  main.cpp
example/include/: main_controller.h  main_module.h  utils.h
example/include/user/: user_controller.h  user_dto.h  user_module.h
example/include/utils/: http_framework.h  utils.h
example/src/: main_controller.cpp  main_module.cpp
example/src/user/: user_controller.cpp  user_module.cpp
lib/: CMakeLists.txt
lib/backend/: CMakeLists.txt
lib/backend/include/backend/: backend.h  concepts.h  controller_base.h  framework.h  module_base.h  parameters.h  route.h  server.h
lib/http/: CMakeLists.txt  README.md
lib/http/include/http/: body.h  codes.h  error.h  framework.h  http.h  method.h  methods.h  query.h  request.h  response.h  status.h  versions.h
lib/http/include/http/utils/: string_helper.h  utils.h
lib/http/src/: body.cpp  error.cpp  method.cpp  methods.cpp  query.cpp  request.cpp  response.cpp  versions.cpp
lib/http/src/utils/: string_helper.cpp
lib/http/tests/: CMakeLists.txt  test.cpp  test_body.cpp  test_methods.cpp  test_request.cpp  test_versions.cpp
lib/http/tests/utils/string_helper/: test_split_string.cpp  test_split_string_at_first_delimiter.cpp  test_trim_string.cpp
lib/network/: CMakeLists.txt  README.md
lib/network/include/network/: tcp_connection.h  tcp_server.h
lib/network/src/: tcp_connection.cpp  tcp_server.cpp
lib/stern/: CMakeLists.txt
lib/stern/include/stern/: controller_base.h  framework.h  module_base.h  parameters.h  server.h  stern.h
